--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -450,7 +450,57 @@ template {
   display: none;
 }
 
-body {
-    background-color: gold;
+/* colors */
+
+/* sizes */
+
+html {
+    font-size: 62.5%;
 }
+
+body {
+    background-color: #333745;
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 16px;
+    font-size: 1.6rem;
+}
+
+button {
+    cursor: pointer;
+}
+
+button:disabled {
+        cursor: default;
+    }
+
+.header {
+  background: #20222b;
+  color: white;
+  margin-bottom: 16px;
+  margin-bottom: 1.6rem;
+  padding: 16px 0;
+  padding: 1.6rem 0;
+}
+
+.header__title {
+      font-size: 32px;
+      font-size: 3.2rem;
+      margin: 0;
+  }
+
+.header__subtitle {
+      color: #a5afd7;
+      font-size: 16px;
+      font-size: 1.6rem;
+      font-weight: 500;
+      margin: 0;
+  }
+
+@media (min-width: 45rem) {
+
+.header {
+    margin-bottom: 4.8rem
+}
+  }
+
 /*# sourceMappingURL=app.css.map*/
