--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -511,4 +511,54 @@ button:disabled {
     padding: 0 1.6rem;
 }
 
+/* Action button */
+
+.action-button {
+    background-color: gold;
+    border: none;
+    border-bottom: 6px solid rgb(204, 172, 0);
+    border-bottom: .6rem solid rgb(204, 172, 0);
+    color: #fff;
+    font-weight: bold;
+    font-size: 32px;
+    font-size: 3.2rem;
+    margin-bottom: 16px;
+    margin-bottom: 1.6rem;
+    padding: 24px;
+    padding: 2.4rem;
+    width: 100%;
+    border-radius: 50px;
+}
+
+.action-button:disabled {
+        opacity: .5;
+    }
+
+@media (min-width: 45rem) {
+
+.action-button {
+        margin-bottom: 4.8rem
+}
+    }
+
+/* Button */
+
+.button {
+    background-color: gold;
+    border: none;
+    border-bottom: 3px solid rgb(230, 194, 0);
+    border-bottom: .3rem solid rgb(230, 194, 0);
+    color: white;
+    font-weight: 500;
+    padding: 12px;
+    padding: 1.2rem;
+}
+
+.button--link {
+        background: none;
+        border: none;
+        color: #a5afd7;
+        padding: 0;
+    }
+
 /*# sourceMappingURL=app.css.map*/
