--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -473,6 +473,10 @@ button:disabled {
         cursor: default;
     }
 
+button:focus {
+        outline: none;
+    }
+
 .header {
   background: #20222b;
   color: white;
@@ -559,6 +563,171 @@ button:disabled {
         border: none;
         color: #a5afd7;
         padding: 0;
+    }
+
+/* Add Option Error */
+
+.add-option-error {
+    color: #a5afd7;
+    font-style: italic;
+    margin: 16px 0 0 0;
+    margin: 1.6rem 0 0 0;
+    padding: 0 16px;
+    padding: 0 1.6rem;
+}
+
+/* Add Option */
+
+.add-option {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 16px;
+    padding: 1.6rem;
+}
+
+@media (min-width: 45rem) {
+
+.add-option {
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row
+}
+    }
+
+.add-option__input {
+        background-color: #333745;
+        border: none;
+        color: #a5afd7;
+        border-bottom: 3px solid rgb(46, 50, 62);
+        border-bottom: .3rem solid rgb(46, 50, 62);
+        -webkit-box-flex: 1;
+            -ms-flex-positive: 1;
+                flex-grow: 1;
+        margin: 0 0 12px 0;
+        margin: 0 0 1.2rem 0;
+        padding: 12px;
+        padding: 1.2rem;
+    }
+
+@media (min-width: 45rem) {
+
+.add-option__input {
+            margin: 0 1.2rem 0 0
+    }
+        }
+
+.option {
+  border-bottom: 1px solid rgb(63, 68, 85);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 32px 16px;
+  padding: 3.2rem 1.6rem;
+}
+
+.option__text {
+      color: #fff;
+      font-weight: 500;
+      font-size: 20px;
+      font-size: 2rem;
+      margin: 0;
+      word-break: break-all;
+  }
+
+/* Widget */
+
+.widget {
+	background-color: #464b5e;
+	margin-bottom: 48px;
+	margin-bottom: 4.8rem;
+}
+
+.widget__message {
+		border-bottom: 1px solid rgb(63, 68, 85);
+		color: #a5afd7;
+		margin: 0;
+		padding: 32px;
+		padding: 3.2rem;
+		text-align: center;
+	}
+
+/* Widget Header */
+
+.widget-header {
+	background-color: #3c4251;
+	color: #a5afd7;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
+	padding: 16px;
+	padding: 1.6rem;
+}
+
+.widget-header__title {
+		margin: 0;
+	}
+
+.ReactModalPortal > div {
+    opacity: 0;
+}
+
+.ReactModalPortal .ReactModal__Overlay {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-transition: opacity 200ms ease-in-out;
+    transition: opacity 200ms ease-in-out;
+}
+
+.ReactModalPortal .ReactModal__Overlay--after-open {
+        opacity: 1;
+    }
+
+.ReactModalPortal .ReactModal__Overlay--before-close {
+        opacity: 0;
+    }
+
+.modal {
+    background-color: #464b5e;
+    color: #fff;
+    max-width: 300px;
+    max-width: 30rem;
+    outline: none;
+    padding: 32px;
+    padding: 3.2rem;
+    text-align: center;
+}
+
+.modal__title {
+        margin: 0 0 16px 0;
+        margin: 0 0 1.6rem 0;
+    }
+
+.modal__body {
+        font-size: 20px;
+        font-size: 2rem;
+        font-weight: 300;
+        margin: 0 0 32px 0;
+        margin: 0 0 3.2rem 0;
+        word-break: break-all;
     }
 
 /*# sourceMappingURL=app.css.map*/
