--- a/app/styles/components/_header.postcss
+++ b/app/styles/components/_header.postcss
@@ -1,17 +1,18 @@
 .header {
-  background: $off-black;
+  background: color($sand shade(5%));
   color: white;
   margin-bottom: $m-size;
   padding: $m-size 0;
+  
 
   &__title {
-      font-size: $l-size;
+      font-size: $xl-size;
       margin: 0;
   }
 
   &__subtitle {
-      color: $off-white;
-      font-size: $m-size;
+      color: color($sand tint(90%));
+      font-size: $l-size;
       font-weight: 500;
       margin: 0;
   }
