--- a/app/styles/base/_settings.postcss
+++ b/app/styles/base/_settings.postcss
@@ -6,6 +6,10 @@ $blue: #3c4251;
 $light-blue: #464b5e;
 $off-white: #a5afd7;
 
+$sand: #E8D58B;
+$pistacchio: #CDFC4E;
+$yellow: #F9F336;
+
 /* sizes */
 $s-size: 1.2rem;
 $m-size: 1.6rem;
